2016-09-24  Eli Zaretskii  <eliz@gnu.org>

	* debug.c (restart) [__MINGW32__]: Cast 2nd argument of execvp to
	avoid compiler warnings about prototype mismatch.  Reported by
	Marc de Bourget <marcdebourget@gmail.com>.

2016-09-08         Arnold D. Robbins     <arnold@skeeve.com>

	* command.y: Update license text to version 3. Oops.

2016-09-07         Arnold D. Robbins     <arnold@skeeve.com>

	* cmd.h, debug.c: Update license text to version citing
	GPLv3+ and with correct FSF address. Thanks to
	David Kaspar <dkaspar@redhat.com> for pointing out the need.

2016-08-25         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.4: Release tar ball made.

2016-08-23         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.h: Sync with grep. API changes.
	* dfa.c: Sync with grep.
	* re.c (make_regexp): Adjust for API changes, move call to dfasyntax
	into stanza that compiles the regex.
	(resetup): Call dfa_init.
	* node.c (str2wstr): using_utf8 is now called dfa_using_utf8.

	Unrelated:

	* Makefile.am: Quote all uses of $(srcdir) and $(distdir).
	(spell): New target.

2016-08-18         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with grep.

2016-08-14         Arnold D. Robbins     <arnold@skeeve.com>

	* re.c (make_regexp): Only call dfasyntax if actually using
	dfa. Gives a 14% speedup on this test: https://raw.githubusercontent.com/chadbrewbaker/awka/master/benchmark/regexp.awk.
	From blathering in comp.lang.awk.

2016-08-12         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNU grep.

	Unrelated:

	* int_array.c: Minor text and formatting edits.

2016-08-09         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* awk.h: Add a comment explaining the NUMINT flag in more detail.
	* int_array.c (standard_integer_string): New function to test whether
	a string matches what would be produced by sprintf("%ld", <value>).
	(is_integer): Fix bug -- if NUMBER was set, then the function was