@@ -1,3 +1,9 @@
+2016-10-25         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* io.c (init_awkpath): Restore documented behavior whereby
+	null elements represent the current directory. Sheesh.
+	Bug reported by "Jun T." <takimoto-j@kba.biglobe.ne.jp>.
+
 2016-09-24  Eli Zaretskii  <eliz@gnu.org>
 
 	* debug.c (restart) [__MINGW32__]: Cast 2nd argument of execvp to
